--- a/dessertShop.html
+++ b/dessertShop.html
@@ -283,6 +283,7 @@
         <a href="#" class="btn">Pinterest</a>
         <a href="#" class="btn">Linkedin</a>
     </div>
+	<h1 class="credit"> created by <span> Fatimah Alamoudi </span> | all rights reserved! </h1>
 </section>
 
 <!--footer section ends-->
