--- a/dessertShop.html
+++ b/dessertShop.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desserts Shop</title>
+    <title>Cake Glore</title>
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
@@ -11,7 +11,7 @@
 <body>
   <!--header section begins--> 
   <header>
-    <a href="#" class="logo"><i class="fas fa-utensils"></i>Desserts</a>
+    <a href="#" class="logo"><i class="fas fa-utensils"></i>Cake Glore</a>
     <div id="menu-bar" class="fas fa-bars"></div>
 
     <nav class="navbar">
