--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
        </div>
 
        <div class="image">
-           <img src="Images/macron1.png" alt="4 macrons">
+           <img src="macron1.png" alt="4 macrons">
        </div>
 
    </section>
@@ -51,7 +51,7 @@
    <h1 class="heading">our <span>spciality</span></h1>    
    <div class="box-container">
        <div class="box">
-           <img class="image" src="Images/chocolateCake.jpg" alt="chocolate Cake">
+           <img class="image" src="chocolateCake.jpg" alt="chocolate Cake">
            <div class="content">
                <h3>Tasty Cakes</h3>
                <P> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</P>
@@ -59,7 +59,7 @@
        </div>
 
        <div class="box">
-        <img class="image" src="Images/lemonPie.jpg" alt="Lemon Pie">
+        <img class="image" src="lemonPie.jpg" alt="Lemon Pie">
         <div class="content">
             <h3>Delicious Pies</h3>
             <P> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</P>
@@ -67,7 +67,7 @@
     </div>
 
     <div class="box">
-        <img class="image" src="Images/crossiant.jpg" alt="crossiant">
+        <img class="image" src="crossiant.jpg" alt="crossiant">
         <div class="content">
             <h3>Incrediable Pastries</h3>
             <P> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</P>
@@ -75,7 +75,7 @@
     </div>
 
     <div class="box">
-        <img class="image" src="Images/whiteChocoloateMouse.jpg" alt="white Chocoloate Mouse">
+        <img class="image" src="whiteChocoloateMouse.jpg" alt="white Chocoloate Mouse">
         <div class="content">
             <h3>Outstanding Desserts</h3>
             <P> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</P>
@@ -94,7 +94,7 @@
     <div class="box-container">
         <div class="box">
             <span class="price">$3 - $5</span>
-                <img src="Images/cookies.jpg" alt="cookies">
+                <img src="cookies.jpg" alt="cookies">
                 <h3>Tasty Cookies</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -109,7 +109,7 @@
 
         <div class="box">
             <span class="price">$3 - $7</span>
-                <img src="Images/dounut.jpg" alt="dounut">
+                <img src="dounut.jpg" alt="dounut">
                 <h3>Tasty Dounut</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -124,7 +124,7 @@
 
         <div class="box">
             <span class="price">$4 - $10</span>
-                <img src="Images/OreoCubcake.jpg" alt="oreo cupcake">
+                <img src="OreoCubcake.jpg" alt="oreo cupcake">
                 <h3>Tasty Cupcakes</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -139,7 +139,7 @@
 
         <div class="box">
             <span class="price">$5 - $20</span>
-                <img src="Images/blueBerryPie.jpg" alt="blue berry pie">
+                <img src="blueBerryPie.jpg" alt="blue berry pie">
                 <h3>Tasty Pie</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -161,7 +161,7 @@
     <h1 class="heading">Our desserts <span>gallery</span></h1>
     <div class="box-container">
         <div class="box">
-            <img src="Images/creepe.jpg" alt="">
+            <img src="creepe.jpg" alt="">
         <div class="content">
             <h3>Tasty Creepe</h3>
             <p>is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
@@ -170,7 +170,7 @@
         </div>
         
         <div class="box">
-            <img src="Images/brownies.jpg" alt="">
+            <img src="brownies.jpg" alt="">
             <div class="content">
             <h3>Tasty Brownies</h3>
             <p>is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
@@ -179,7 +179,7 @@
         </div>
 
         <div class="box">
-            <img src="Images/pancake.jpg" alt="">
+            <img src="pancake.jpg" alt="">
             <div class="content">
             <h3>Tasty Pancakes</h3>
             <p>is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
@@ -188,7 +188,7 @@
         </div>
 
         <div class="box">
-            <img src="Images/redVelvetCake.jpg" alt="">
+            <img src="redVelvetCake.jpg" alt="">
             <div class="content">
             <h3>Tasty Cakes</h3>
             <p>is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
@@ -205,7 +205,7 @@
     <h1 class="heading">Our customers <span>reviews</span></h1>  
     <div class="box-container">
         <div class="box">
-            <img src="Images/person1.jpg" alt="">
+            <img src="person1.jpg" alt="">
             <h3>Liam Wanseston</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -218,7 +218,7 @@
         </div>
 
         <div class="box">
-            <img src="Images/person2.jpg" alt="">
+            <img src="person2.jpg" alt="">
             <h3>William Jung</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -231,7 +231,7 @@
         </div>
 
         <div class="box">
-            <img src="Images/person3.jpg" alt="">
+            <img src="person3.jpg" alt="">
             <h3>Messi Liam</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
